# bparm

CAD/: 91290A013_Alloy Steel Socket Head Screw.SLDPRT  91290A115_Alloy Steel Socket Head Screw.SLDPRT  Base.SLDPRT  BaseDriveHolder.SLDPRT  BevelReductor.SLDPRT  CSF-11-Bracket.SLDPRT  CSF-11-DrumHolder.SLDPRT  CSF-8-Bracket.SLDPRT  CSF-8-Buffer.SLDPRT  CSF-8-XXX-2A-R.SLDPRT  CSF-8-coupler-machined.SLDPRT  CSF-8-output-1.SLDPRT  CSF-8-output-2.SLDPRT  CSF-8-output.SLDPRT  Claw.SLDASM  ClawBase.SLDPRT  ClawDriveGear.SLDPRT  ClawDrivenGear.SLDPRT  ClawGearPeg.SLDPRT  ClawGrab.SLDPRT  ClawParallel.SLDPRT  ClawParallelPeg.SLDPRT  D405_Solid.SLDPRT  DifferentialShaft.SLDPRT  ElbowLinkLower.SLDPRT  ElbowLinkMiddleLower.SLDPRT  ElbowLinkMiddleUpper.SLDPRT  ElbowLinkUpper.SLDPRT  ElbowMiddleReductor.SLDPRT  ElbowUpperReductor.SLDPRT  GM2804+Encoder.SLDPRT  GM2804.SLDPRT  GM2804Holder.SLDPRT  GM2804Hub.SLDPRT  GM2804HubSmall.SLDPRT  GM2804Shaft-Machined.SLDPRT  GM3506 With Encoder.SLDPRT  GM3506Holder.SLDPRT  GM3506HubSmall.SLDPRT  ODrive-GM2804.SLDASM  (+19 more)
CAD/Design 1/: DS3218MG MS24 Digital Servo 270.SLDPRT  FingerTip.SLDPRT  Full Gripper.SLDASM  JawRod.SLDPRT  RackGear.SLDPRT  RackPinion_casing.SLDPRT  spur gear.SLDPRT
bparm_5_1_description/: CMakeLists.txt
bparm_5_1_description/meshes/: link1.STL  link2.STL  link3.STL  link4.STL  linkGripper.STL
bparm_5_1_description/urdf/: 5.1.urdf  bparm_5_1_description.urdf
bparm_5_1_moveit_config/: package.xml
bparm_5_1_moveit_config/config/: bparm_5_1.ros2_control.xacro  initial_positions.yaml  ros2_controllers.yaml
bparm_5_1_moveit_config/launch/: moveit_rviz.launch.py  warehouse_db.launch.py
bparm_launches/: package.xml  setup.py
bparm_launches/launch/: bparm.launch.py  teleop_joints.launch.py
bparm_utils/: setup.cfg
bparm_utils/bparm_utils/: camera_pose_listener.py
compute_traj/: CMakeLists.txt  package.xml
link6_fk/: package.xml
odrive_controller/: setup.py
odrive_controller/odrive_controller/: odrive_controller_node.py
relay_traj/: package.xml  setup.cfg
relay_traj/relay_traj/: relay_traj_node.py
src/bparm_5_1_description/: package.xml
src/bparm_5_1_description/launch/: display.launch.py  gz_sim_bparm_launch.py
src/bparm_5_1_description/meshes/: base_link.STL  link5.STL  link6.STL  linkCamera.STL
src/bparm_5_1_moveit_config/: CMakeLists.txt
src/bparm_5_1_moveit_config/config/: bparm_5_1.srdf  bparm_5_1.urdf.xacro
src/bparm_5_1_moveit_config/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/bparm_launches/: setup.cfg
src/bparm_launches/launch/: fk_demo.launch.py  traj_demo.launch.py
src/bparm_utils/: package.xml  setup.py
src/compute_traj/msg/: ComputeTrajRequest.msg
src/compute_traj/src/: compute_traj.cpp
src/link6_fk/: setup.cfg  setup.py
src/link6_fk/link6_fk/: fk_node.py
src/odrive_controller/: package.xml
src/relay_traj/: setup.py
src/slider_gui/: package.xml  setup.cfg  setup.py
src/slider_gui/slider_gui/: gui_node.py
